--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,49 +1,26 @@
 <header class="z-10 py-4 bg-white shadow-md dark:bg-gray-800">
   <div class="container flex items-center justify-between h-full px-6 mx-auto text-purple-600 dark:text-purple-300">
 
-    <!-- Mobile hamburger -->
-    <button class="p-1 mr-5 -ml-1 rounded-md md:hidden focus:outline-none focus:shadow-outline-purple"
-            (click)="toggleSideMenu()" aria-label="Menu">
-      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
-        <path fill-rule="evenodd" clip-rule="evenodd"
-          d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z">
-        </path>
-      </svg>
-    </button>
-
-    <!-- Search input -->
+    <!-- Credits -->
     <div class="flex justify-center flex-1 lg:mr-32">
       <div class="relative w-full max-w-xl mr-6 focus-within:text-purple-500">
-        <div class="absolute inset-y-0 flex items-center pl-2">
-          <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z">
-            </path>
-          </svg>
-        </div>
-        <input type="text" placeholder="Search for projects" aria-label="Search"
-               class="w-full pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0 rounded-md
-                      dark:placeholder-gray-500 dark:focus:shadow-outline-gray dark:focus:placeholder-gray-600
-                      dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 focus:bg-white focus:border-purple-300
-                      focus:outline-none focus:shadow-outline-purple form-input"/>
+        <p class="dark:text-gray-600 text-gray-400">Dieses Projekt wurde von Yannic Drews & Yanic Döpner erstellt.</p>
       </div>
     </div>
 
     <ul class="flex items-center flex-shrink-0 space-x-6">
-      <!-- Theme toggler -->
-      <li class="flex">
-        <button aria-label="Toggle color mode" class="rounded-md focus:outline-none focus:shadow-outline-purple"
-          (click)="toggleTheme()" >
+      <!-- Theme Switcher -->
+      <li class="lg:absolute lg:right-10">
+        <button aria-label="Theme wechseln" class="rounded-md focus:outline-none focus:shadow-outline-purple hover:bg-gray-500
+                                                   dark:hover:bg-gray-700 hover:bg-opacity-20 p-2 transition duration-300 ease-in-out"
+          (click)="toggleTheme(true)">
           @if (!isDark) {
-            <template>
               <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
                 <path
                   d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z">
                 </path>
               </svg>
-            </template>
           } @else {
-            <template>
               <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
                 <path
                   fill-rule="evenodd" clip-rule="evenodd"
@@ -54,7 +31,6 @@
                   8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
                 ></path>
               </svg>
-            </template>
           }
         </button>
       </li>
