--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,76 @@
-<p>sidebar works!</p>
+<aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0 h-full">
+  <div class="py-4 text-gray-500 dark:text-gray-400">
+    <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" routerLink="/">
+      <img ngSrc="assets/img/db-logo.png" height="2160" width="3840" class="w-12 h-10 inline" alt="Logo"> BahnAPI mit PHP
+    </a>
+    <ul class="mt-6">
+      <li class="relative px-6 py-3">
+        @if (document.location.pathname == "/") {
+          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+        }
+        <a routerLink="/" class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors
+                                 duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100">
+
+          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
+               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0
+              011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
+            </path>
+          </svg>
+          <span class="ml-4">Startseite</span>
+
+        </a>
+      </li>
+    </ul>
+    <ul>
+      <li class="relative px-6 py-3">
+        @if (document.location.pathname == "/train-station") {
+          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+        }
+        <a routerLink="/train-station" class="inline-flex items-center w-full text-sm font-semibold transition-colors
+                                              duration-150 hover:text-gray-800 dark:hover:text-gray-200">
+
+          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
+               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2
+              2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01">
+            </path>
+          </svg>
+          <span class="ml-4">Bahnhöfe (Detailiert)</span>
+
+        </a>
+      </li>
+
+      <li class="relative px-6 py-3">
+        @if (document.location.pathname == "/statistics") {
+          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+        }
+        <a routerLink="/statistics" class="inline-flex items-center w-full text-sm font-semibold transition-colors
+                                           duration-150 hover:text-gray-800 dark:hover:text-gray-200">
+
+          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
+               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+            <path
+              d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2
+              0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10">
+            </path>
+          </svg>
+          <span class="ml-4">Interessante Statistiken</span>
+
+        </a>
+      </li>
+
+    </ul>
+
+    <!-- Cache button -->
+    <div class="px-6 my-6">
+      <button class="flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 text-white
+      transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600
+      hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
+        Cache neuladen
+      </button>
+    </div>
+  </div>
+</aside>
