--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body * {
+  /* add animation to switch page theme */
+  @apply transition-colors duration-200;
+}
