changed website accent colour to red

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <header class="z-10 py-4 bg-white shadow-md dark:bg-gray-800">
-  <div class="container flex items-center justify-between h-full px-6 mx-auto text-purple-600 dark:text-purple-300">
+  <div class="container flex items-center justify-between h-full px-6 mx-auto text-red-600">
 
     <!-- Credits -->
     <div class="flex justify-center flex-1 lg:mr-32">
-      <div class="relative w-full max-w-xl mr-6 focus-within:text-purple-500">
+      <div class="relative w-full max-w-xl mr-6 focus-within:text-red-500">
         <p class="dark:text-gray-600 text-gray-400">Dieses Projekt wurde von Yannic Drews & Yanic Döpner erstellt.</p>
       </div>
     </div>
@@ -11,7 +11,7 @@
     <ul class="flex items-center flex-shrink-0 space-x-6">
       <!-- Theme Switcher -->
       <li class="lg:absolute lg:right-10">
-        <button aria-label="Theme wechseln" class="rounded-md focus:outline-none focus:shadow-outline-purple hover:bg-gray-500
+        <button aria-label="Theme wechseln" class="rounded-md focus:outline-none focus:shadow-outline-red hover:bg-gray-500
                                                    dark:hover:bg-gray-700 hover:bg-opacity-20 p-2 transition duration-300 ease-in-out"
           (click)="toggleTheme(true)">
           @if (!isDark) {
