--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     <ul class="mt-6">
       <li class="relative px-6 py-3">
         @if (document.location.pathname == "/") {
-          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+          <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
         }
         <a routerLink="/" class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors
                                  duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100">
@@ -26,7 +26,7 @@
     <ul>
       <li class="relative px-6 py-3">
         @if (document.location.pathname == "/train-station") {
-          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+          <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
         }
         <a routerLink="/train-station" class="inline-flex items-center w-full text-sm font-semibold transition-colors
                                               duration-150 hover:text-gray-800 dark:hover:text-gray-200">
@@ -45,7 +45,7 @@
 
       <li class="relative px-6 py-3">
         @if (document.location.pathname == "/statistics") {
-          <span class="absolute inset-y-0 left-0 w-1 bg-purple-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
+          <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg" aria-hidden="true"></span>
         }
         <a routerLink="/statistics" class="inline-flex items-center w-full text-sm font-semibold transition-colors
                                            duration-150 hover:text-gray-800 dark:hover:text-gray-200">
@@ -67,8 +67,8 @@
     <!-- Cache button -->
     <div class="px-6 my-6">
       <button class="flex items-center justify-between w-full px-4 py-2 text-sm font-medium leading-5 text-white
-      transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600
-      hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple">
+      transition-colors duration-150 bg-red-600 border border-transparent rounded-lg active:bg-red-600
+      hover:bg-red-700 focus:outline-none focus:shadow-outline-purple">
         Cache neuladen
       </button>
     </div>
