--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -1,1 +1,35 @@
-<p>train-station works!</p>
+<div class="dark:text-white">
+  <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">Seitentitel</h2>
+
+  <div class="dark:bg-gray-800 rounded-lg flex items-center p-4 w-96 shadow-xs bg-gray-100 mt-12">
+    <p>Seitenbeschreibung</p>
+  </div>
+
+  <div class="grid grid-cols-2 gap-4 mt-32">
+    <p>Überschrieft Tabelle</p>
+    <input type="text" placeholder="Bahnhof" class="justify-self-end">
+  </div>
+
+  <table class="min-w-full divide-y divide-gray-500 mt-6">
+    <thead class="bg-gray-50 dark:bg-gray-700">
+    <tr>
+      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Adresse/Koordinaten</th>
+      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Betreiber</th>
+      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Internet vorhanden</th>
+      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">barrierefrei</th>
+      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">has localTransport</th>
+    </tr>
+    </thead>
+    <tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-500">
+
+    <tr>
+      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">123 Main St, 40.7128° N, 74.0060° W</td>
+      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">Company A</td>
+      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">Yes</td>
+      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">Yes</td>
+      <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">Yes</td>
+    </tr>
+
+    </tbody>
+  </table>
+</div>
