--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -1,11 +1,14 @@
 <div class="dark:text-white">
-  <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">Seitentitel</h2>
+  <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">Detailierte Ansicht von Bahnhöfen</h2>
 
   <div class="dark:bg-gray-800 rounded-lg flex items-center p-4 w-96 shadow-xs bg-gray-100 mt-12">
-    <p>Seitenbeschreibung</p>
+    <p>Diese Seite bietet eine detaillierte Ansicht der Bahnhöfe, einschließlich ihrer Adressen, Betreiber,
+       Internetverfügbarkeit, Barrierefreiheit und lokalen Transportmöglichkeiten.
+    </p>
+
   </div>
 
-  <div class="grid grid-cols-2 gap-4 mt-32">
+  <div class="grid grid-cols-2 gap-4 mt-6">
     <p>Überschrieft Tabelle</p>
     <input type="text" placeholder="Bahnhof" class="justify-self-end">
   </div>
@@ -20,7 +23,7 @@
       <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">has localTransport</th>
     </tr>
     </thead>
-    <tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-500">
+    <tbody class="bg-white dark:bg-gray-800 dark:hover:bg-gray-800/60 divide-y divide-gray-500">
 
     <tr>
       <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">123 Main St, 40.7128° N, 74.0060° W</td>
