train-station: add better light mode table

--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -8,22 +8,22 @@
 
   </div>
 
-  <div class="grid grid-cols-2 gap-4 mt-6">
+  <div class="grid grid-cols-2 gap-4 mt-11">
     <p>Überschrieft Tabelle</p>
     <input type="text" placeholder="Bahnhof" class="justify-self-end">
   </div>
 
   <table class="min-w-full divide-y divide-gray-500 mt-6">
-    <thead class="bg-gray-50 dark:bg-gray-700">
+    <thead class="bg-gray-300 dark:bg-gray-700">
     <tr>
-      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Adresse/Koordinaten</th>
-      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Betreiber</th>
-      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Internet vorhanden</th>
-      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">barrierefrei</th>
-      <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">has localTransport</th>
+      <th scope="col" class="px-6 py-3 text-left text-ml font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Adresse/Koordinaten</th>
+      <th scope="col" class="px-6 py-3 text-left text-ml font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Betreiber</th>
+      <th scope="col" class="px-6 py-3 text-left text-ml font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Internet vorhanden</th>
+      <th scope="col" class="px-6 py-3 text-left text-ml font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">barrierefrei</th>
+      <th scope="col" class="px-6 py-3 text-left text-ml font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">has localTransport</th>
     </tr>
     </thead>
-    <tbody class="bg-white dark:bg-gray-800 dark:hover:bg-gray-800/60 divide-y divide-gray-500">
+    <tbody class="bg-gray-200 hover:bg-gray-200/60 dark:bg-gray-800 dark:hover:bg-gray-800/60 divide-y divide-gray-500">
 
     <tr>
       <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-200">123 Main St, 40.7128° N, 74.0060° W</td>
