--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,73 +4,21 @@
       <img ngSrc="assets/img/db-logo.png" height="2160" width="3840" class="w-14 h-10 inline" alt="Logo"> BahnAPI mit PHP
     </a>
     <ul class="mt-6">
-      <li class="relative px-6 py-3">
-        <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg opacity-0 transform
-                     scale-y-0 transition-all duration-300 ease-in-out" aria-hidden="true"
-              [class.!opacity-100]="router.url == '/' && isLoaded"
-              [class.!translate-x-0]="router.url == '/' && isLoaded"
-              [class.!scale-y-100]="router.url == '/' && isLoaded"></span>
-        <a routerLink="/" class="inline-flex items-center w-full text-sm font-semibold transition-colors
-                                 duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-           [ngClass]="router.url == '/' && isLoaded ? 'text-gray-800 dark:text-gray-100' : ''">
-
-          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
-               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-            <path
-              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0
-              011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6">
-            </path>
-          </svg>
-          <span class="ml-4">Startseite</span>
-
-        </a>
-      </li>
+      <sidebar-page-item [redirect_url]="'/'" [site_name]="'Startseite'"
+                         [icon_path]="'M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 ' +
+                          '1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6'">
+      </sidebar-page-item>
     </ul>
+
     <ul>
-      <li class="relative px-6 py-3">
-        <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg opacity-0 transform
-                     scale-y-0 transition-all duration-300 ease-in-out" aria-hidden="true"
-              [class.!opacity-100]="router.url === '/train-station' && isLoaded"
-              [class.!translate-x-0]="router.url === '/train-station' && isLoaded"
-              [class.!scale-y-100]="router.url === '/train-station' && isLoaded"></span>
-        <a routerLink="/train-station" class="inline-flex items-center w-full text-sm font-semibold transition-colors
-                                              duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-           [ngClass]="router.url == '/train-station' && isLoaded ? 'text-gray-800 dark:text-gray-100' : ''">
+      <sidebar-page-item [redirect_url]="'/train-station'" [site_name]="'Bahnhöfe (Detailiert)'"
+                         [icon_path]="'M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 ' +
+                          '002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01'">
+      </sidebar-page-item>
 
-          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
-               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-            <path
-              d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2
-              2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01">
-            </path>
-          </svg>
-          <span class="ml-4">Bahnhöfe (Detailiert)</span>
-
-        </a>
-      </li>
-
-      <li class="relative px-6 py-3">
-        <span class="absolute inset-y-0 left-0 w-1 bg-red-600 rounded-tr-lg rounded-br-lg opacity-0 transform
-                     scale-y-0 transition-all duration-300 ease-in-out" aria-hidden="true"
-              [class.!opacity-100]="router.url === '/statistics' && isLoaded"
-              [class.!translate-x-0]="router.url === '/statistics' && isLoaded"
-              [class.!scale-y-100]="router.url === '/statistics' && isLoaded"></span>
-        <a routerLink="/statistics" class="inline-flex items-center w-full text-sm font-semibold transition-colors
-                                           duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-           [ngClass]="router.url == '/statistics' && isLoaded ? 'text-gray-800 dark:text-gray-100' : ''">
-
-          <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round" stroke-linejoin="round"
-               stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-            <path
-              d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2
-              0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10">
-            </path>
-          </svg>
-          <span class="ml-4">Interessante Statistiken</span>
-
-        </a>
-      </li>
-
+      <sidebar-page-item [redirect_url]="'/statistics'" [site_name]="'Interessante Statistiken'"
+                         [icon_path]="'M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z'">
+      </sidebar-page-item>
     </ul>
 
     <!-- Cache button -->
