--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -45,7 +45,7 @@
     </thead>
     <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
 
-    <tr class="text-gray-700 dark:text-gray-400">
+    <tr class="text-gray-700 dark:text-gray-400 hover:bg-gray-700/30">
       <td class="px-4 py-3">123 Main St, 40.7128° N, 74.0060° W</td>
       <td class="px-4 py-3">Company A</td>
       <td class="px-4 py-3">Yes</td>
