--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,14 @@
 <header class="z-10 py-4 bg-white shadow-md dark:bg-gray-800">
   <div class="container flex items-center justify-between h-full px-6 mx-auto text-red-600">
+    <!-- Mobile hamburger -->
+    <button class="p-1 mr-5 -ml-1 rounded-md md:hidden focus:outline-none focus:shadow-outline-purple"
+            (click)="sidebarService.toggleMobileMenu()" aria-label="Menu" id="hamburger">
+      <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
+        <path fill-rule="evenodd" clip-rule="evenodd"
+          d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3
+          15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"></path>
+      </svg>
+    </button>
 
     <!-- Credits -->
     <div class="flex justify-center flex-1 lg:mr-32">
@@ -13,7 +22,7 @@
       <li class="lg:absolute lg:right-10">
         <button aria-label="Theme wechseln" class="rounded-md focus:outline-none focus:shadow-outline-red hover:bg-gray-500
                                                    dark:hover:bg-gray-700 hover:bg-opacity-20 p-2 transition duration-300 ease-in-out"
-          (click)="toggleTheme(true)">
+          (click)="toggleTheme()">
           @if (!isDark) {
               <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
                 <path
