train-station: change table title style

--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -10,9 +10,9 @@
 
   <div class="grid grid-cols-2 gap-4 mt-11 items-center">
 
-    <h3 class="text-xl font-semibold">Aktueller Bahnhof: <h3 class="text-red-600">{{currentTrainStation}}</h3></h3>
+    <h3 class="text-xl font-extrabold">Aktueller Bahnhof: <span class="text-red-600">{{currentTrainStation}}</span></h3>
 
-    <div class="flex justify-center flex-1 justify-self-end h-10">
+    <div class="flex justify-center flex-1 justify-self-end h-10 mt-0">
       <div class="relative mr-6 focus-within:text-red-500">
         <div class="absolute inset-y-0 flex items-center pl-2">
           <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
