--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
-<aside class="z-20 w-64 overflow-y-auto bg-white dark:bg-gray-800 flex-shrink-0 h-full"
-       [ngClass]="{'hidden md:block': !sidebarService.isMobileMenuOpen,
-                   'fixed inset-y-0 mt-16 md:hidden': sidebarService.isMobileMenuOpen}">
+<aside class="z-20 w-64 overflow-y-auto bg-white dark:bg-gray-800 flex-shrink-0 h-full
+              transition-transform duration-300 ease-in-out"
+       [ngClass]="{'-translate-x-full fixed md:relative md:translate-x-0': !sidebarService.isMobileMenuOpen,
+            'translate-x-0 absolute inset-y-0 mt-16 left-0 w-full md:hidden': sidebarService.isMobileMenuOpen}">
   <div class="py-4 text-gray-500 dark:text-gray-400">
     <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" routerLink="/">
       <img ngSrc="assets/img/db-logo.png" height="2160" width="3840" class="w-14 h-10 inline" alt="Logo"> BahnAPI mit PHP
