--- a/src/app/util/page-item/page-item.component.html
+++ b/src/app/util/page-item/page-item.component.html
@@ -5,8 +5,9 @@
         [ngClass]="router.url == redirect_url && isLoaded ? '!opacity-100 !translate-x-0 !scale-y-100' : ''">
   </span>
 
-  <a routerLink="{{ redirect_url }}" class="inline-flex items-center w-full text-sm font-semibold transition-colors
-                                            duration-150 hover:text-gray-800 dark:hover:text-gray-200"
+  <a routerLink="{{ redirect_url }}" (click)="sidebarService.closeMobileMenu()"
+     class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800
+            dark:hover:text-gray-200"
      [ngClass]="router.url == redirect_url && isLoaded ? 'text-gray-800 dark:text-gray-100' : ''">
 
     <!-- Content of the Tab -->
