--- a/src/app/pages/train-station/train-station.component.html
+++ b/src/app/pages/train-station/train-station.component.html
@@ -29,10 +29,11 @@
         </div>
 
         <!-- Search-Input -->
-        <input class="mt-0 w-full h-10 pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0
+        <input id="searchStation" class="mt-0 w-full h-10 pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0
         rounded-md dark:placeholder-gray-500 dark:focus:shadow-outline-gray dark:focus:placeholder-gray-600
         dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 focus:bg-white focus:outline-none
-        focus:shadow-outline-purple form-input" type="text" placeholder="Bahnhof suche" aria-label="Search">
+        focus:shadow-outline-purple form-input" type="text" placeholder="Bahnhof suche" aria-label="Search"
+        (keyup.enter)="changeTrainStation()">
       </div>
     </div>
   </div>
