train-station: add basic layout

--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,1 +1,32 @@
-<p>statistics works!</p>
+<div class="dark:text-white">
+
+  <!-- Title of the Page -->
+  <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">Interessante Statistiken</h2>
+
+  <!-- Description of the Page -->
+  <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+    <p class="text-sm text-gray-600 dark:text-gray-400">
+      Diese Seite bietet Statistiken für den vergleich von Verspätungen Zügen und barrierefreien Bahnhöfen.
+    </p>
+  </div>
+
+  <div class="grid grid-cols-2 gap-8 mt-32">
+
+    <!-- Statistics punctuality -->
+    <!-- Hi Yannic die border ist nur für debugging und so da :) -->
+    <div class="border border-red-700 w-full">
+      <h2 class="font-semibold text-2xl">Verspätungen der Züge</h2>
+
+
+    </div>
+
+
+    <!-- Statistics for barrier-free stations -->
+    <div class="border border-red-700 w-full">
+      <h2 class="font-semibold text-2xl">Barrierefreie bahnhöfe</h2>
+
+    </div>
+
+  </div>
+
+</div>
