implemented fully input box with route planing & date picker

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,11 @@ body * {
 .cp-0\.5 {
   padding: .5rem .75rem;
 }
+
+.ml-7\.5 {
+  margin-left: 1.9rem;
+}
+
+.ml-0\.4 {
+  margin-left: 0.09rem;
+}
