--- a/src/app/pages/start-main/start-main.component.html
+++ b/src/app/pages/start-main/start-main.component.html
@@ -33,15 +33,8 @@
     dark:focus:shadow-outline-gray" placeholder="Name des Bahnhofs..">
       <div class="absolute inset-y-0 flex items-center ml-2 pointer-events-none">
         <svg class="w-5 h-5 mt-1" aria-hidden="true" fill="#6b7280" xmlns="http://www.w3.org/2000/svg"
-             viewBox="0 0 297 297" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-          <path d="M148.5,0C87.43,0,37.747,49.703,37.747,110.797c0,91.026,99.729,179.905,103.976,183.645
-      c1.936,1.705,4.356,2.559,6.777,2.559c2.421,0,4.841-0.853,6.778-2.559c4.245-3.739,103.975-92.618,103.975-183.645
-      C259.253,49.703,209.57,0,148.5,0z M148.5,272.689c-22.049-21.366-90.243-93.029-90.243-161.892
-      c0-49.784,40.483-90.287,90.243-90.287s90.243,40.503,90.243,90.287C238.743,179.659,170.549,251.322,148.5,272.689z"/>
-          <path d="M148.5,59.183c-28.273,0-51.274,23.154-51.274,51.614c0,28.461,23.001,51.614,51.274,51.614
-      c28.273,0,51.274-23.153,51.274-51.614C199.774,82.337,176.773,59.183,148.5,59.183z M148.5,141.901
-      c-16.964,0-30.765-13.953-30.765-31.104c0-17.15,13.801-31.104,30.765-31.104c16.964,0,30.765,13.953,30.765,31.104
-      C179.265,127.948,165.464,141.901,148.5,141.901z"/>
+             viewBox="0 0 24 24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+          <path d="M12 13V21M12 13C14.7614 13 17 10.7614 17 8C17 5.23858 14.7614 3 12 3C9.23858 3 7 5.23858 7 8C7 10.7614 9.23858 13 12 13Z"/>
         </svg>
       </div>
     </div>
@@ -63,10 +56,12 @@ S381.9,104.65,381.9,203.25z"/>
 
   <!-- Second Line (Date & Route Setting) -->
   <div class="relative flex flex-nowrap justify-between">
-    <div class="mt-6 ml-2 block">
-      <button class="flex w-auto flex-col text-gray-400">
-        <div class="flex h-14">
-         <svg class="w-5 h-5 mr-2 -ml-1 mt-0.5" fill="none" stroke="#6b7280" aria-hidden="true" viewBox="0 0 24 24"
+    <div class="mt-6 ml-2 flex justify-start gap-x-8 w-full">
+      <!-- Date Picker -->
+      <button class="flex w-auto flex-col text-gray-600 dark:text-gray-400 -ml-2 hover:bg-gray-700 hover:dark:bg-white
+                     hover:dark:bg-opacity-5 hover:bg-opacity-5 rounded-lg pl-2">
+        <div class="flex">
+         <svg class="w-5 h-5 mr-2 mt-0.5" fill="none" stroke="#6b7280" aria-hidden="true" viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
            <path d="M3 10H21M7 3V5M17 3V5M6.2 21H17.8C18.9201 21 19.4802 21 19.908 20.782C20.2843 20.5903 20.5903
            20.2843 20.782 19.908C21 19.4802 21 18.9201 21 17.8V8.2C21 7.07989 21 6.51984 20.782 6.09202C20.5903 5.71569
@@ -74,20 +69,49 @@ S381.9,104.65,381.9,203.25z"/>
            5.40973 3.40973 5.71569 3.21799 6.09202C3 6.51984 3 7.07989 3 8.2V17.8C3 18.9201 3 19.4802 3.21799
            19.908C3.40973 20.2843 3.71569 20.5903 4.09202 20.782C4.51984 21 5.07989 21 6.2 21Z" />
          </svg>
-          <h2 class="m-0 pl-1.5 whitespace-nowrap leading-6 font-bold">Heute, ab 14:52</h2>
-          <!-- TODO -->
-<!--          <svg class="w-4 h-4 mr-2 -ml-1 mt-1" fill="none" stroke="#FFFFFF" aria-hidden="true" viewBox="0 0 20 20"-->
-<!--               xmlns="http://www.w3.org/2000/svg" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">-->
-<!--            <path d="M249.365851,6538.70769 L249.365851,6538.70769 C249.770764,6539.09744 250.426289,6539.09744-->
-<!--            250.830166,6538.70769 L259.393407,6530.44413 C260.202198,6529.66364 260.202198,6528.39747 259.393407,6527.61699-->
-<!--            L250.768031,6519.29246 C250.367261,6518.90671 249.720021,6518.90172 249.314072,6519.28247 L249.314072,6519.28247-->
-<!--            C248.899839,6519.67121 248.894661,6520.31179 249.302681,6520.70653 L257.196934,6528.32352 C257.601847,6528.71426-->
-<!--            257.601847,6529.34685 257.196934,6529.73759 L249.365851,6537.29462 C248.960938,6537.68437 248.960938,6538.31795-->
-<!--            249.365851,6538.70769" />-->
-<!--          </svg>-->
+          <h2 class="-ml-1 pl-1.5 whitespace-nowrap leading-6 font-bold" id="date-pick">Heute, ab 14:52</h2>
+          <svg class="mt-1.5 w-3.5 h-3.5 mx-2" viewBox="0 0 16 16" fill="#dc2626"  fill-rule="evenodd" aria-hidden="true"
+               xmlns="http://www.w3.org/2000/svg" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+              <g transform="rotate(45 1254.793 524.438)">
+                <path d="M11.532 1048.341H9.536v-9h-9v-2h11z" />
+              </g>
+          </svg>
         </div>
-        <div></div>
+        <span class="ml-7.5">Filtern nach Datum</span>
       </button>
+
+      <!-- Route Planner -->
+      <button class="flex w-56 flex-col text-gray-600 dark:text-gray-400 -ml-2 hover:bg-gray-700 hover:dark:bg-white
+               hover:dark:bg-opacity-5 hover:bg-opacity-5 rounded-lg pl-2">
+        <div class="flex flex-col min-w-0">
+          <div class="flex items-center">
+            <svg class="flex-shrink-0 w-5 h-5 mr-2 mt-0.5" viewBox="0 0 297 297" fill="#6b7280" xmlns="http://www.w3.org/2000/svg"
+                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M148.5,0C87.43,0,37.747,49.703,37.747,110.797c0,91.026,99.729,179.905,103.976,183.645
+                c1.936,1.705,4.356,2.559,6.777,2.559c2.421,0,4.841-0.853,6.778-2.559c4.245-3.739,103.975-92.618,103.975-183.645
+                C259.253,49.703,209.57,0,148.5,0z M148.5,272.689c-22.049-21.366-90.243-93.029-90.243-161.892
+                c0-49.784,40.483-90.287,90.243-90.287s90.243,40.503,90.243,90.287C238.743,179.659,170.549,251.322,148.5,272.689z"/>
+              <path d="M148.5,59.183c-28.273,0-51.274,23.154-51.274,51.614c0,28.461,23.001,51.614,51.274,51.614
+                c28.273,0,51.274-23.153,51.274-51.614C199.774,82.337,176.773,59.183,148.5,59.183z M148.5,141.901
+                c-16.964,0-30.765-13.953-30.765-31.104c0-17.15,13.801-31.104,30.765-31.104c16.964,0,30.765,13.953,30.765,31.104
+                C179.265,127.948,165.464,141.901,148.5,141.901z"/>
+            </svg>
+            <div class="flex items-center min-w-0 flex-grow">
+              <h2 class="-ml-1 pl-1.5 whitespace-nowrap leading-6 font-bold">Route planen</h2>
+              <svg class="flex-shrink-0 mt-1.5 w-3.5 h-3.5 mx-2" viewBox="0 0 16 16" fill="#dc2626" fill-rule="evenodd" aria-hidden="true"
+                   xmlns="http://www.w3.org/2000/svg" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                <g transform="rotate(45 1254.793 524.438)">
+                  <path d="M11.532 1048.341H9.536v-9h-9v-2h11z"/>
+                </g>
+              </svg>
+            </div>
+          </div>
+          <span class="pl-7 ml-0.4 w-full">Endhaltestelle hinzufügen</span>
+        </div>
+      </button>
+
+      <!-- Tooltip -->
+      <span class="ml-auto self-center w-5/12 text-right text-gray-600 dark:text-gray-400">Die Angabe des Datums & der Endhaltestelle ist optional.</span>
     </div>
   </div>
 </div>
